--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="banner">
+              <p>1350x350</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="banner">
               <p>1</p>
             </div>
           </div>
