--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <div class="header-bar">
         <div style="display:flex; justify-content: space-between; align-items: center;">
           <div class="header-left grow">
-            <!-- <div class="header-left__logo"></div> -->
-            <img class="header-left__logo" src="./img/anhduonglogo.jpg" alt="" />
+            <div class="header-left__logo"> <p>...x60</p></div>
+            <!-- <img class="header-left__logo" src="./img/anhduonglogo.jpg" alt="" /> -->
           </div>
           <div class="hiddennav">
             <i class="ti-view-grid"></i>
