--- a/index.html
+++ b/index.html
@@ -186,100 +186,132 @@
           </div>
           <div class="product-list">
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì1</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì2</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì3</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì4</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì5</h3>
-            </div>
-            <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì6</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
           </div>
         </div>
 
         <div class="product-line">
           <div class="product-line__title">
-            <h2>Túi đựng quần áo và giày dép</h2>
+            <h2>in bao bì</h2>
           </div>
           <div class="product-list">
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
-            </div>
-            <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
           </div>
         </div>
 
         <div class="product-line">
           <div class="product-line__title">
-            <h2>Túi siêu thị - túi tự hủy</h2>
+            <h2>in bao bì</h2>
           </div>
           <div class="product-list">
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
             <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
-            </div>
-            <div class="product__item">
-              <img class="" src="./img/product.jpeg" alt="">
-              <h3 class="product__name">In bao Bì</h3>
+              <a class="product__item--link" href="" >
+                <img class="" src="./img/product.jpeg" alt="">
+                <h3 class="product__name">In bao Bì1</h3>
+              </a>
             </div>
           </div>
         </div>
-
-
-        
       </div>
       <!-- End: Content -->
+
+      <!-- Begin: Footer -->
+      <footer id="footer">
+        <div class="footer-top">
+          <p class="footer-top__text">thông tin liên hệ</p>
+        </div>
+        <div class="container__text">
+          <h1 class="company__name">công ty trách nhiệm hữu hạn plaa plaa</h1>
+          <p class="footer__text"><strong><i class="ti-location-pin"></i> địa chỉ:</strong> 100 CÁCH MẠNG THÁNG TÁM, PHƯỜNG LONG TOÀN, THÀNH PHỐ BÀ RỊA, BR-VT</p>
+          <p class="footer__text"><strong><i class="ti-mobile"></i> hotline: 0908017391 </strong></p>
+          <p class="footer__text" style="text-transform: none;"><strong style="text-transform: uppercase;"><i class="ti-email"></i> mail:</strong> trandinhthanh04091997it@gmail.com</p>
+        </div>
+      </footer>
+      <div class="coppyright">
+        <p>Coppyright 2022 <strong>Ánh Dương plastic</strong></p>
+      </div>
+      <!-- End: Footer -->
 
     </div>
 
