--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <h1 class="company__name">công ty trách nhiệm hữu hạn plaa plaa</h1>
           <p class="footer__text"><strong><i class="ti-location-pin"></i> địa chỉ:</strong> 100 CÁCH MẠNG THÁNG TÁM, PHƯỜNG LONG TOÀN, THÀNH PHỐ BÀ RỊA, BR-VT</p>
           <p class="footer__text"><strong><i class="ti-mobile"></i> hotline: 0908017391 </strong></p>
-          <p class="footer__text" style="text-transform: none;"><strong style="text-transform: uppercase;"><i class="ti-email"></i> mail:</strong> trandinhthanh04091997it@gmail.com</p>
+          <p class="footer__text" style="text-transform: none;"><strong style="text-transform: uppercase;"><i class="ti-email"></i> mail:</strong> trandinhthanhit@gmail.com</p>
         </div>
       </footer>
       <div class="coppyright">
